Implemented open sans typeface

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -8,6 +8,10 @@ html, body {
 }
 
 body {
+    /* Font */
+    --primary-font-family: 'Open Sans';
+
+
   /* Font Size Toggle */
   --task-font-size: 11pt;
   --task-assignee-font-size: 10pt;
