--- a/src/assets/css/Calendar.css
+++ b/src/assets/css/Calendar.css
@@ -143,7 +143,7 @@
 
 .PriorityToggle {
     flex-shrink: 1;
-    font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
+    font-family: var(--primary-font-family);
     color: #FFF;
     font-weight: 500;
     font-size: 28px;
@@ -199,7 +199,7 @@
 
 .CalendarShortcutItemLabel {
     flex: 1;
-    font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
+    font-family: var(--primary-font-family);
     font-weight: 400;
     font-size: 12pt;
     color: #FFF;
@@ -210,7 +210,7 @@
 .CalendarShortcutDaysInput {
     flex: 1;
     max-width: 50px;
-    font-family: 'Segoe UI', Lucinda Sans, Geneva, Verdana, sans-serif;
+    font-family: var(--primary-font-family);
     color: #FFF;
     background: var(--surface-color-alternate);
     text-align: center;
@@ -265,7 +265,7 @@
 .CalendarMemberName {
     flex-shrink: 1;
     color: var(--primary-inactive-text-color);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: var(--primary-font-family);
     font-size: 11pt;
     font-weight: 500;
     vertical-align: middle;
@@ -281,7 +281,7 @@
 .CalendarAssignToHeader {
     flex-shrink: 1;
     color: var(--alternate-active-text-color);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: var(--primary-font-family);
     font-size: 10pt;
     padding-top: 10px;
     padding-bottom: 10px;
