--- a/src/assets/css/LockScreen.css
+++ b/src/assets/css/LockScreen.css
@@ -43,7 +43,7 @@
     height: 100px;
     margin: auto;
     font-size: 24pt;
-    font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
+    font-family: var(--primary-font-family);
     color: #FFF;
 }
 
@@ -71,7 +71,7 @@
     bottom: 15px;
     left: 5px;
     color: #DDD;
-    font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
+    font-family: var(--primary-font-family);
     font-size: 12pt;
 }
 
