--- a/src/assets/css/MenuSubtitle.css
+++ b/src/assets/css/MenuSubtitle.css
@@ -4,7 +4,7 @@
 
 .MenuSubtitle {
     color: #CCC;
-    font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
+    font-family: var(--primary-font-family);
     font-size: 10pt;
     text-align: left;
     margin-left: 15px;
