--- a/src/assets/css/ShareMenu.css
+++ b/src/assets/css/ShareMenu.css
@@ -93,7 +93,7 @@
     flex-shrink: 1;
     width: 280px;
     margin: 5px 5px 5px 5px;
-    font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
+    font-family: var(--primary-font-family);
     background: var(--surface-color-alternate);
     color: var(--alternate-active-text-color);
     border: gray 1px solid;
@@ -150,7 +150,7 @@
     flex-shrink: 1;
     width: fit-content;
     color: var(--alternate-active-text-color);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: var(--primary-font-family);
     font-size: 9pt;
     vertical-align: middle;
     padding-left: 4px;
@@ -173,7 +173,7 @@
 }
 
 .MembersListRoleTitle {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: var(--primary-font-family);
     color: var(--alternate-inactive-text-color);
     font-size: 12pt;
     text-align: center;
@@ -333,7 +333,7 @@
 
 .NoMembersMessage {
     color: #FFF;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: var(--primary-font-family);
     font-size: 10pt;
 }
 
