--- a/src/assets/css/StatusBar.css
+++ b/src/assets/css/StatusBar.css
@@ -60,14 +60,14 @@
   }
 
   .ErrorMessage {
-      font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
+      font-family: var(--primary-font-family);
       font-size: 12pt;
       color: #D00;
       font-weight: 700;
   }
 
   .VersionNumber {
-      font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
+      font-family: var(--primary-font-family);
       font-size: 8pt;
       color: #FFF;
   }
