--- a/src/assets/css/TaskListSettingsMenu.css
+++ b/src/assets/css/TaskListSettingsMenu.css
@@ -35,7 +35,7 @@
 
 .ShowCompletedTasksLabel {
     width: 100%;
-    font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
+    font-family: var(--primary-font-family);
     font-weight: 400;
     font-size: 10pt;
     padding-left: 15px;
@@ -64,7 +64,7 @@
 
 .TaskListSettingsMenuItemLabel {
     flex-grow: 1;
-    font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
+    font-family: var(--primary-font-family);
     font-size: 10pt;
     font-weight: 400;
     color: var(--primary-active-text-color);
