--- a/src/assets/css/TaskText.css
+++ b/src/assets/css/TaskText.css
@@ -8,7 +8,7 @@
 }
 
 .TaskText {
-  font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
+  font-family: var(--primary-font-family);
   width: 100%;
   color: var(--task-text-color);
   font-Size: var(--task-font-size);
