--- a/src/assets/css/react-day-picker/style.css
+++ b/src/assets/css/react-day-picker/style.css
@@ -1,6 +1,6 @@
 /* DayPicker styles */
 div {
-  font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
+  font-family: var(--primary-font-family);
 }
 
 .DayPicker {
