--- a/src/assets/css/AppSettingsMenu/AppSettingsMenuSubtitle.css
+++ b/src/assets/css/AppSettingsMenu/AppSettingsMenuSubtitle.css
@@ -11,7 +11,7 @@
     flex: 1;
     display: inline;
     color: #CCC;
-    font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
+    font-family: var(--primary-font-family);
     font-size: 10pt;
     text-align: center;
 }
