--- a/src/assets/css/Project.css
+++ b/src/assets/css/Project.css
@@ -38,7 +38,7 @@
     text-align: center;
     vertical-align: middle;
     color: #BBB;
-    font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
+    font-family: var(--primary-font-family);
     font-size: 15pt;
 }   
 
