--- a/src/assets/css/ProjectSelector.css
+++ b/src/assets/css/ProjectSelector.css
@@ -55,7 +55,7 @@
 .ProjectSelectorText {
   color: var(--primary-inactive-text-color);
     margin: 5px;
-    font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
+    font-family: var(--primary-font-family);
     font-size: 16pt;
     -webkit-user-select: none;
     user-select: none;
@@ -132,7 +132,7 @@
 
 .ProjectSelectorIconText {
   display: block;
-  font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
+  font-family: var(--primary-font-family);
   font-size: 12pt;
   color: var(--due-date-text-color);
   text-align: center;
@@ -143,7 +143,7 @@
 .ProjectSelectorInput {
   color: var(--primary-active-text-color);
   margin: auto 5px;
-  font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
+  font-family: var(--primary-font-family);
   font-size: 16pt;
   background: var(--surface-color-alternate);
   border: 0px solid #FFF;
