--- a/src/assets/css/Button.css
+++ b/src/assets/css/Button.css
@@ -15,9 +15,11 @@
     opacity: 0.25;
     pointer-events: none;
 }
+
 .ButtonContainer[data-size*="small"] {
     height: 27px;
-    width: 48px;
+    width: 55px;
+    padding: 2px;
 }
 
 .ButtonContainer[data-size*="verysmall"] {
@@ -41,33 +43,38 @@
 
 .ButtonContentFlexItemContainer {
     flex-shrink: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
     width: 100%;
     height: 100%;
 }
 
 .ButtonIcon {
+    flex-shrink: 1;
     width: 100%;
     height: 100%;
     color: #FFF;
 }
 
 .ButtonText {
+    flex-shrink: 1;
     width: 100%;
-    height: 100%;
     color: #FFF;
+    font-size: 11pt;
     text-align: center;
-    line-height: 27px; /* Keeps text Vertically Centered on Chrome Mobile */
     font-family: var(--primary-font-family);
 }
 
 .ButtonText[data-size*="small"] {
+    flex-shrink: 1;
     font-size: 8pt;
-    line-height: 20pt;
-    vertical-align: middle;
 }
 
 .ButtonText[data-size*="verysmall"] {
+    flex-shrink: 1;
     font-size: 8pt;
-    line-height: 14pt;
-    vertical-align: middle;
 }
+
