Added "Show only Tasks assigned to Myself" Functionality.

--- a/src/assets/css/ToolBarButton.css
+++ b/src/assets/css/ToolBarButton.css
@@ -37,10 +37,22 @@
     width: 100%;
 }
 
+.AssignedToSelfToggleContainer {
+    flex-shrink: 1;
+    width: fit-content;
+    height: fit-content;
+}
+
 .ToolbarPairsFlexContainer {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: space-between;
     align-items: center;
+    align-content: center;
+}
+
+.ToggleIcon {
+    width: 100%;
+    height: 100%;
 }
