showOnlySelfTasksOnly switch now only displays for Remote projects. Also Centered it a bit better.

--- a/src/assets/css/ToolBarButton.css
+++ b/src/assets/css/ToolBarButton.css
@@ -39,6 +39,7 @@
 
 .AssignedToSelfToggleContainer {
     flex-shrink: 1;
+    padding-top: 4px;
     width: fit-content;
     height: fit-content;
 }
