--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -9,7 +9,7 @@ html, body {
 
 body {
     /* Font */
-    --primary-font-family: 'Open Sans';
+    --primary-font-family: 'Open Sans','Lucida Grande';
 
 
   /* Font Size Toggle */
