--- a/src/assets/css/Project.css
+++ b/src/assets/css/Project.css
@@ -24,6 +24,7 @@
 .ProjectNameContainer {
     width: 100%;
     height: 32px;
+    padding-top: 5px;
     display: flex;
     flex-direction: row;
     justify-content: center;
