--- a/src/assets/css/Containers/HorizontalCenteringContainer.css
+++ b/src/assets/css/Containers/HorizontalCenteringContainer.css
@@ -1,9 +1,9 @@
-.VerticalCenteringContainer {
+.HorizontalCenteringContainer {
     position: relative;
     width: 100%;
     height: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-content: center;
     align-items: center;
