--- a/src/assets/css/AppSettingsMenu/AppSettingsMenu.css
+++ b/src/assets/css/AppSettingsMenu/AppSettingsMenu.css
@@ -106,6 +106,7 @@
     color: var(--alternate-active-text-color);
     border: gray 1px solid;
     padding: 1px;
+    margin-top: 4px;
 }
 
 .DatabaseSettingsPageInfoPane {
@@ -145,22 +146,27 @@
 }
 
 .AppSettingsAccountLogo {
+    flex-shrink: 1;
+    margin-top: 20px;
     width: 90px;
     height: 90px;
 }
 
 .AppSettingsAccountStatus {
+    margin-top: 10px;
+    flex-shrink: 1;
     font-family: var(--primary-font-family);
     height: 24px;
     color: var(--alternate-active-text-color);
 }
 
 .AppSettingsAccountDisplayName {
+    flex-shrink: 1;
+    width: fit-content;
     font-family: var(--primary-font-family);
     font-size: 10pt;
-    margin-top: 10px;
-    height: 20px;
-    color:var(--alternate-inactive-text-color);
+    color: var(--alternate-inactive-text-color);
+    margin-top: 25px;
 }
 
 .AppSettingsAccountEmailDisplay {
@@ -168,9 +174,11 @@
     font-size: 10pt;
     height: 24px;
     color: var(--alternate-active-text-color);
+    margin-bottom: 25px;
 }
 
 .AppSettingsAccountEmailContainer {
+    flex-shrink: 1;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -180,11 +188,26 @@
     margin-top: 25px;
 }
 
+
 .AppSettingsAccountDisplayNameContainer {
+    flex-shrink: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-content: center;
+    align-items: center;
+    width: 100%;
     margin-top: 10px;
 }
 
 .AppSettingsAccountPasswordContainer {
+    flex-shrink: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-content: center;
+    align-items: center;
+    width: 100%;
     margin-top: 10px;
 }
 
