Added non functional scrollbar config.

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -58,10 +58,14 @@ body {
 
   /* Task List */
   --task-list-header-text-color: #FFF;
-  --task-list-header-selected-text-color: #FFF;   /* NEW */
-  --task-list-header-selected-border-color: #FFF; /* REMOVE */
-  --task-list-header-background-color: #332d38;      /* NEW */
-  --task-list-header-background-selected-color: #665b70; /* CHANGED */
+  --task-list-header-selected-text-color: #FFF;  
+  --task-list-header-selected-border-color: #FFF;
+  --task-list-header-background-color: #332d38;  
+  --task-list-header-background-selected-color: #665b70;
+
+    /* Scroll Bar */
+    --scrollbar-track-color: #444;
+    --scrollbar-thumb-color: #666;
 
   /* Database */
   --database-synced-color: #008000;
