--- a/src/assets/css/AppSettingsMenu/AppSettingsSidebar.css
+++ b/src/assets/css/AppSettingsMenu/AppSettingsSidebar.css
@@ -4,6 +4,7 @@
     justify-content: space-between;
     align-items: center;
     align-content: center;
+    flex-wrap: wrap;
     width: 100%;
     height: 100%;
 }
@@ -14,8 +15,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-left: 10px;
+    margin-right: 10px;
     width: 100%;
-    height: 100%;
+    height: 35px;
 }
 
 
@@ -24,7 +27,6 @@
     color: gray;
     font-family: var(--primary-font-family);
     font-size: 12pt;
-    padding-left: 5px;
 }
 
 .AppSettingsSidebarItemLabel[data-isselected*="true"] {
