--- a/src/assets/css/Task.css
+++ b/src/assets/css/Task.css
@@ -29,11 +29,15 @@
 
 .TaskContainer[data-ismoving*="true"] {
   background: rgba(63,63,180,255);
-  animation: PingMovingTask 0.25s linear 1;
+  transition: background-color 250ms ease;
+  animation: PingMovingTask 2s infinite;
 }
 
 @keyframes PingMovingTask {
+  0% { background: rgba(63,63,220,255)}
+  50% { background: rgba(100,100,220,255)}
   100% { background: rgba(63,63,220,255)}
+
 }
 
 .TaskContainer-enter {
@@ -177,7 +181,7 @@
 
 .OptionsTransitionItem-enter {
   position: absolute;
-  left: -100%;
+  right: -100%;
   opacity: 0.01;
   width: 100%;
   z-index: 5;
@@ -186,10 +190,10 @@
 
 .OptionsTransitionItem-enter-active {
   position: absolute;
-  left: 0px;
+  right: 0px;
   opacity: 1;
   width: 100%;
-  transition: left 150ms ease-out, opacity 100ms ease-out;
+  transition: right 150ms ease-out, opacity 100ms ease-out;
   z-index: 5;
 }
 
@@ -202,7 +206,7 @@
 .OptionsTransitionItem-exit {
   position: absolute;
   top: 0px;
-  left: 0%;
+  right: 0%;
   opacity: 1;
   width: 100%;
   z-index: 5;
@@ -211,11 +215,11 @@
 .OptionsTransitionItem-exit-active {
   position: absolute;
   top: 0px;
-  left: -100%;
+  right: -100%;
   opacity: 0.01;
   width: 100%;
   z-index: 5;
-  transition: left 150ms ease-out, opacity 100ms ease-out;
+  transition: right 150ms ease-out, opacity 100ms ease-out;
 }
 
 .OptionsTransitionItem-exit-done {
