--- a/src/assets/css/AppSettingsMenu/AboutPage.css
+++ b/src/assets/css/AppSettingsMenu/AboutPage.css
@@ -37,53 +37,29 @@
     color: var(--alternate-inactive-text-color);
 }
 
-.AboutPageSystemInfoContainer {
-    flex-shrink: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-}
 
 .AboutPageDivider {
     flex-shrink: 1;
     height: 100px;
 }
 
-.AboutPageSystemValueContainer {
-    flex-shrink: 1;
-}
-
-.AboutPageSystemValue {
-    font-family: var(--primary-font-family);
-    color: var(--primary-inactive-text-color);
-}
 
 .AboutPageContactContainer {
     flex-shrink: 1;
+    width: 90%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .AboutPageContactText {
     flex-shrink: 1;
+    width: fit-content;
     font-size: 10pt;
     font-family: var(--primary-font-family);
     color: var(--primary-active-text-color);
-}
-
-.AboutPageGithubMarkContainer {
-    margin-top: 10px;
-    width: 48px;
-    height: 48px;
-    cursor: pointer;
-}
-
-.AboutPageGithubMark {
-    width: 100%;
-    height: 100%;
+    margin-bottom: 10px;
 }
