Implemented ShowCompletedTasks and ProjectMenu.

--- a/src/assets/css/ToolBarButton.css
+++ b/src/assets/css/ToolBarButton.css
@@ -44,6 +44,13 @@
     height: fit-content;
 }
 
+.ShowCompletedTasksToggleContainer {
+    flex-shrink: 1;
+    padding-top: 4px;
+    width: fit-content;
+    height: fit-content;
+}
+
 .ToolbarPairsFlexContainer {
     display: flex;
     flex-direction: row;
