--- a/src/assets/css/Containers/OverlayMenuContainer.css
+++ b/src/assets/css/Containers/OverlayMenuContainer.css
@@ -3,12 +3,15 @@
     position: fixed;
     top: 0px;
     left: 0px;
-    background: rgba(0, 0, 0, 0.5);
     margin: 0px;
     padding: 0px;
     width: 100%;
     height: 100%;
     z-index: 6;
+}
+
+.OverlayMenuContainer[data-renderoverlay*="true"] {
+    background: rgba(0, 0, 0, 0.5);
 }
 
 .OverlayMenuMeasuringContainer {
