--- a/src/assets/css/Project.css
+++ b/src/assets/css/Project.css
@@ -59,6 +59,65 @@
     opacity: 0.5;
 }
 
+.ProjectHeaderMenuButtonContainer {
+    position: absolute;
+    width: 36px;
+    height: 36px;
+    padding-right: 5px;
+    padding-top: 3px;
+    right: 0px;
+    top: 0px;
+    opacity: 0.5;
+}
+
+.ProjectHeaderMenuButton {
+    width: 100%;
+    height: 100%;
+}
+
+.ProjectMenuContainer {
+    position: absolute;
+    right: 15px;
+    top: 10px;
+    z-index: 6;
+}
+
+.ProjectMenuContentGrid {
+    width: 225px;
+    height: 100%;
+    background: var(--surface-color);
+    border: 1px solid gray;
+    display: grid;
+    grid-template-rows: [ShowCompletedItems] 48px;
+}
+
+.ProjectMenuItem {
+    width: 100%;
+    grid-row: ShowCompletedItems;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+}
+
+.ProjectMenuItemIcon {
+    flex-shrink: 1;
+    width: 32px;
+    height: 32px;
+    padding-left: 5px;
+    opacity: 0.75;
+}
+
+.ProjectMenuItemLabel {
+    flex-shrink: 1;
+    color: var(--primary-active-text-color);
+    font-size: 10pt;
+    padding: 5px 15px 5px 0px;
+}
+
+
+
 .TaskListsContainer {
     padding-top: 77px; /* This should always be the opposite of the offset given to ScrollToComponent(). Otherwise it will scroll the
     list toolbar out of view. */
