--- a/src/assets/css/TaskListSettingsMenu.css
+++ b/src/assets/css/TaskListSettingsMenu.css
@@ -1,47 +1,91 @@
+/* Transitioning */
+
+.TaskListSettingsTransition-enter {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    display: block;
+    transform: translateX(100%);
+    z-index: 5;
+}
+
+.TaskListSettingsTransition-enter-active {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    transform: translateX(0%);
+    transition: transform 250ms ease;
+    z-index: 5;
+}
+
+.TaskListSettingsTransition-enter-done {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 5;
+}
+
+.TaskListSettingsTransition-exit {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    display: block;
+    transform: translateX(0%);
+    z-index: 5;
+}
+
+.TaskListSettingsTransition-exit-active {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    transform: translateX(100%);
+    transition: transform 250ms ease;
+    z-index: 5;
+}
+
+.TaskListSettingsTransition-exit-done {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: 5;
+}
+
+/* Content */
 
 .TaskListSettingsMenuContainer {
-    position: fixed;
-    right: 10%;
-    left: 10%;
-    top: 25%;
-    display: flex;
-    height: fit-content;
-    flex-direction: column;
-    flex-basis: auto;
-    align-items: flex-start;
-    background: var(--surface-color-alternate);
-    border: 1px solid white;
-    color: var(--primary-active-text-color);
-    box-shadow: 5px 5px 10px 0px #111;
-}
-
-
-.ShowCompletedTasksSelection {
-    display: table;
-    width: fit-content;
-    padding-left: 4px;
-    padding-bottom: 8px;
-    padding-top: 8px;
-    border-bottom: 1px rgb(80, 80, 80) solid;
-}
-
-.ShowCompletedTasksCheckBox {
-    display: table-cell;
-    vertical-align: middle;
-    margin-left: 5px;
-    height: 12px;
-    width: 12px;
-}
-
-.ShowCompletedTasksLabel {
+    display: grid;
+    position: relative;
+    grid-template-rows: [MenuHeader]min-content [SortingOptions]auto [ChecklistOptions]1fr;
     width: 100%;
-    font-family: var(--primary-font-family);
-    font-weight: 400;
-    font-size: 10pt;
-    padding-left: 15px;
-    display: table-cell;
-    vertical-align: middle;
+    height: 100vh;
+    background: var(--surface-color-alternate);
+    color: var(--primary-active-text-color);
+    overflow-y: scroll;
 }
+
+.TaskListSettingsMenuHeaderContainer {
+    grid-row: MenuHeader;
+}
+
+.TaskListSettingsSortingOptionsContainer {
+    grid-row: SortingOptions;
+    display: grid;
+    grid-template-columns: [Left]1fr [Right]1fr;
+}
+
+.TaskListSettingsSortingOptionsHeaderContainer {
+    grid-column: Left / span 2;
+}
+
+.TaskListSettingsChecklistOptionsContainer {
+    grid-row: ChecklistOptions;
+    position: relative;
+}
+
 
 
 .TaskListSettingsMenuItemContainer {
@@ -56,10 +100,7 @@
     flex-direction: row;
     justify-content: left;
     align-items: center;
-}
-
-.TaskListSettingsMenuItemContainer:hover {
-    background: rgba(52, 52, 52, 255);
+    padding-left: 10px;
 }
 
 .TaskListSettingsMenuItemLabel {
@@ -91,5 +132,5 @@
     margin-bottom: -1px;
     width: 135px;
     margin-left: 20px;
-    border-bottom: 0px rgb(65,65,65) solid;
+    border-bottom: 0px rgb(65, 65, 65) solid;
 }
