Fixes for issue #48. Added new primary-divider-color Config item.

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -37,6 +37,7 @@ body {
   --loading-spinner-secondary-color: #ffffff;
   --button-background-top-color: #333333;
   --button-background-bottom-color: #2d2d2d;
+  --primary-divider-color: #3D3D3D;
 
   /* Task */
   --task-checkbox-color: #FFF;
