--- a/src/assets/css/MenuSubtitle.css
+++ b/src/assets/css/MenuSubtitle.css
@@ -3,7 +3,7 @@
 }
 
 .MenuSubtitle {
-    color: #CCC;
+    color: var(--alternate-active-text-color);
     font-family: var(--primary-font-family);
     font-size: 10pt;
     text-align: left;
@@ -15,6 +15,6 @@
 .MenuSubtitleFullBleedDivider {
     width: 100%;
     height: 1px;
-    background: var(--task-divider-color);
+    background: var(--primary-divider-color);
     margin-bottom: 10px;
 }
