--- a/src/assets/css/AppSettingsMenu/AppSettingsMenu.css
+++ b/src/assets/css/AppSettingsMenu/AppSettingsMenu.css
@@ -408,9 +408,12 @@
 /* Color Picker Transitioning */
 .ColorPickerContainer-enter {
     position: fixed;
-    bottom: -100vh;
+    bottom: 0px;
     left: 0px;
+    top: 0px;
+    right: 0px;
     width: 100%;
+    transform: translateY(200%);
     z-index: 30;
 }
 
@@ -418,15 +421,20 @@
     position: fixed;
     bottom: 0px;
     left: 0px;
+    top: 0px;
+    right: 0px;
     width: 100%;
     z-index: 30;
-    transition: bottom 250ms ease;
+    transform: translateY(0%);
+    transition: transform 250ms ease;
 }
 
 .ColorPickerContainer-enter-done {
     position: fixed;
     bottom: 0px;
     left: 0px;
+    top: 0px;
+    right: 0px;
     width: 100%;
     z-index: 30;
 }
@@ -435,17 +443,23 @@
     position: fixed;
     bottom: 0px;
     left: 0px;
+    top: 0px;
+    right: 0px;
     width: 100%;
+    transform: translateY(0%);
     z-index: 30;
 }
 
 .ColorPickerContainer-exit-active {
     position: fixed;
-    bottom: -100vh;
+    bottom: 0px;
     left: 0px;
+    top: 0px;
+    right: 0px;
     width: 100%;
     z-index: 30;
-    transition: bottom 250ms ease;
+    transform: translateY(200%);
+    transition: transform 250ms ease;
 }
 
 .ColorPickerContainer-exit-done {
