--- a/src/assets/css/TaskMetadata.css
+++ b/src/assets/css/TaskMetadata.css
@@ -1,20 +1,15 @@
 .TaskMetadata {
+    position: relative;
     background: rgb(42,42,42);
     user-select: none;
     cursor: default;
-}
-
-.TaskMetadataHeader {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: flex-start;
-    align-content: center;
-    align-items: center;
-    width: 100%;
-    height: fit-content;
+    z-index: 3;
 }
 
 .TaskMetadataCloseButtonContainer {
+    position: absolute;
+    right: 0px;
+    top: 0px;
     padding: 5px 10px 0px 10px;
 }
 
@@ -32,28 +27,40 @@
 .TaskMetadataGrid {
     height: 100%;
     display: grid;
-    grid-template-columns: [Label]1fr [Value]1fr;
+    grid-template-columns: [Icon]0.35fr [Value]1fr;
     grid-auto-rows: auto;
     padding: 0px 5px 5px 5px;
 }
 
-.TaskMetadataLabel {
-    grid-column: Label;
-    align-self: stretch;
-    height: 100%;
+.TaskMetadataSubtitleContainer {
+    grid-column: Icon / span 2;
+    padding: 5px 0px 5px 10px;
+    font-size: 9pt;
+}
+
+.TaskMetadataSubtitle {
     color: var(--alternate-active-text-color);
-    font-family: var(--primary-font-family);
-    font-size: 10pt;
-    vertical-align: middle;
-    margin-right: 5px;
-    margin-top: 5px;
-    margin-bottom: 5px;
+}
+
+.TaskMetadataIconContainer {
+    grid-column: Icon;
+    align-self: stretch;
+    justify-self: start;
+    padding-left: 10px;
+    padding-right: 10px;
+    width: 20px;
+}
+
+.TaskMetadataIcon {
+    width: 100%;
+    height: 100%;
 }
 
 .TaskMetadataValue {
     grid-column: Value;
     align-self: stretch;
     height: 100%;
+    min-height: 18px;
     color: var(--primary-active-text-color);
     font-family: var(--primary-font-family);
     font-size: 10pt;
