--- a/src/assets/css/react-day-picker/style.css
+++ b/src/assets/css/react-day-picker/style.css
@@ -150,6 +150,9 @@ div {
 }
 
 /* Default modifiers */
+.DayPicker-Day--followingRenewDate {
+  background: orange;
+}
 
 .DayPicker-Day--today {
   color: #FFF;
@@ -171,6 +174,11 @@ div {
 }
 
 /* Example modifiers */
+
+.DayPicker-Day--nextRenew {
+  background-color: green;
+  color: #FFF;
+}
 
 .DayPicker-Day--sunday {
   background-color: #f7f8f8;
