Fix for issue #73

--- a/src/assets/css/ShareMenu.css
+++ b/src/assets/css/ShareMenu.css
@@ -102,6 +102,11 @@
     text-align: center;
 }
 
+.InviteEmail::placeholder {
+    color: var(--alternate-inactive-text-color);
+    opacity: 1;
+}
+
 .InviteRoleSelect {
     flex-shrink: 1;
     width: 140px;
