--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -72,13 +72,12 @@ body {
   --database-synced-color: #008000;
   --database-updates-pending-color: #FF9300;
 
-  background: var(--primary-color);
+  background: var(--background-color);
 }
 
 #root {
   height: 100%;
   min-height: 100%;
-  background: rgba(0,0,0,255);
 
   /* Layout */
   --back-arrow-margin-left: 14px;
@@ -86,7 +85,6 @@ body {
 }
 
 .App {
-  background: rgba(0,0,0,255);
   width: 100%;
   height: 100%;
   min-height: 100%;
