Last mile fixes for Version 2.1.0

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -72,6 +72,9 @@ body {
   --database-synced-color: #008000;
   --database-updates-pending-color: #FF9300;
 
+  /* Comments */
+  --unread-comment-color: #1455c0;
+
   background: var(--background-color);
 }
 
