--- a/src/assets/css/CommentPanel/Comment.css
+++ b/src/assets/css/CommentPanel/Comment.css
@@ -3,14 +3,14 @@
     font-family: var(--primary-font-family);
     font-size: 9pt;
     display: grid;
-    grid-template-rows: [Header]1fr [Text]1fr;
+    grid-template-rows: [Header]auto [Text]1fr;
     grid-row-gap: 3px;
-    margin: 0px 10px 15px 5px;
+    margin: 0px 10px 15px 0px;
 }
 
 .CommentContainer[data-isunread*="true"] {
     border-left-width: 6px;
-    border-left-color: rgb(76, 76, 200);
+    border-left-color: var(--unread-comment-color);
     border-left-style: solid;
 }
 
@@ -22,10 +22,12 @@
 
 .CommentHeaderContainer {
     grid-row: Header;
+    padding-left: 5px;
 }
 
 .CommentTextContainer {
     grid-row: Text;
+    padding-left: 5px;
 }
 
 .CommentText {
