--- a/src/assets/css/CommentPanel/CommentPanel.css
+++ b/src/assets/css/CommentPanel/CommentPanel.css
@@ -10,10 +10,10 @@
     grid-row: Comments;
     align-self: center;
     justify-self: stretch;
-    height: 100%;
+    height: 100vh;
     margin: 0px 10px 0px 10px;
     padding-right: 10px;
-    overflow-y: auto;
+    overflow-y: scroll;
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
