--- a/src/assets/css/ProjectSelector.css
+++ b/src/assets/css/ProjectSelector.css
@@ -133,6 +133,14 @@
   display: none;
 }
 
+.ProjectSelectorCommentsIcon {
+  float: right;
+  margin: 0px 2px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+}
+
 .ProjectSelectorIconText {
   display: block;
   font-family: var(--primary-font-family);
