--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,6 +1,15 @@
 body {
-    width: '100vw';
-    height: '100vw';
+    width: 100vw;
+    height: 100vh;
     overflow: hidden;
+    margin: 0;
+    padding: 0;
+    font-family: open-sans;
+    overflow: hidden;
+}
+
+#root {
+    height: 100%;
+    width: 100%;
 }
 
