--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,7 +1,8 @@
 body {
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
     margin: 0;
     padding: 0;
     font-family: open-sans;
