--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -7,6 +7,7 @@ body {
     padding: 0;
     font-family: open-sans;
     overflow: hidden;
+    -webkit-tap-highlight-color: rgba(0,0,0,0); /* Stop iOS dimming on touch down */
 }
 
 #root {
